# bd-fontchanger

./: LICENSE  README.md  pyproject.toml
bd_fontchanger/: admin.py  apps.py  models.py
bd_fontchanger/fontchanger_package/: __init__.py  cog.py
bd_fontchanger/migrations/: 0001_initial.py
