[project]
name = "bd_fontchanger"
version = "1.0.0"

description = "Change BD fonts without editing code "
license = "MIT"
license-files = ["LICENSE"]

authors = [ { name = "dormieriancitizen", email = "foo@bar.com"} ]
readme = "README.md"

[project.urls]
homepage="https://github.com/dormieriancitizen/bd-fontchanger"
